On small screens the word-wrap for extra long words wasn't working well ... Now resolved with auto hyphenation for words getting broken due to space crunch

--- a/app/react/components/sizung/components/AgendaItem/index.css
+++ b/app/react/components/sizung/components/AgendaItem/index.css
@@ -22,8 +22,16 @@
 .content-container {
   width: 100%;
   padding-right: 30px;
-  word-wrap: break-word;
   overflow: hidden;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 
 .status-container {
