--- a/app/react/components/sizung/components/Comment/index.css
+++ b/app/react/components/sizung/components/Comment/index.css
@@ -55,4 +55,14 @@
 
 .comment-body {
   padding-right: 20px;
+  width: 100%;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
